# simul

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh  simulConfig.h.in
lin-alg/: Vector.cpp  Vector.hpp
linalg/: BoundaryConditions.cpp  BoundaryConditions.hpp  BvpOde.cpp  BvpOde.hpp  CMakeLists.txt  FiniteDiffGrid.cpp  FiniteDiffGrid.hpp  LinSys.cpp  Matrix.cpp  Matrix.hpp  Node.hpp  SecondOrderOde.hpp  Vector.cpp  Vector.hpp
